--- a/.env.dist
+++ b/.env.dist
@@ -1,12 +1,12 @@
 # Application's path (absolute or relative)
-PROJECT_APP_PATH=./../../istore/
+PROJECT_APP_PATH=./../../path/
 
 #Project prefix
-PROJECT_PREFIX=istore
+PROJECT_PREFIX=project_prefix
 
 #Nginx proxy
 VIRTUAL_PORT=80
-VIRTUAL_HOST=istore-docker.local
+VIRTUAL_HOST=example-docker.local
 VIRTUAL_NETWORK=nginx-proxy
 
 
@@ -14,10 +14,10 @@ VIRTUAL_NETWORK=nginx-proxy
 PHP_BUILD_PATH=./phpfpm
 
 #MySQL
-MYSQL_ROOT_PASSWORD=ntcnjdsq1
-MYSQL_DATABASE=billing
-MYSQL_USER=root1
-MYSQL_PASSWORD=ntcnjdsq1
+MYSQL_ROOT_PASSWORD=passwordroot
+MYSQL_DATABASE=dbname
+MYSQL_USER=user
+MYSQL_PASSWORD=password
 
 #open port
 MYSQL_PORT=33062
